<resources>
    <string name="app_name">TourGuide</string>
    <string name="main_label">Tour Guide: Barcelona</string>
    <string name="sagradaFamiliaName">Basilica de la Sagrada Familia</string>
    <string name="sagradaFamiliaAddress">Carrer de Mallorca, 401</string>
    <string name="sagradaFamiliaTelephone">+34 932 08 04 14</string>
    <string name="sagradaFamiliaWebPage">www.sagradafamilia.org</string>
    <string name="sagradaFamiliaEmail">informacio@sagradafamilia.org</string>
    <string name="pobleEspanyolName">Poble Espanyol de Barcelona</string>
    <string name="pobleEspanyolAddress">Avinguda Francesc de Ferrer i Guàrdia, 13</string>
    <string name="pobleEspanyolTelephone">+34 935 08 63 00</string>
    <string name="pobleEspanyolWebPage">www.poble-espanyol.com</string>
    <string name="pobleEspanyolEmail">info@poble-espanyol.com</string>
    <string name="laPedreraName">La Pedrera</string>
    <string name="laPedreraAddress">Passeig de Gràcia, 92</string>
    <string name="laPedreraTelephone">+34 902 20 21 38</string>
    <string name="laPedreraWebPage">www.lapedrera.com</string>
    <string name="laPedreraEmail">reserves@lapedrera.com</string>
    <string name="palauName">Palau de la Música Catalana</string>
    <string name="palauAddress">Palau de la Música, 4-6</string>
    <string name="palauTelephone">+34 902 47 54 85</string>
    <string name="palauWebPage">www.palaumusica.cat</string>
    <string name="palauEmail">visites@palaumusica.cat</string>
    <string name="mCampNouName">Camp Nou Experience</string>
    <string name="mCampNouAddress">Aristides Maillol, s/n</string>
    <string name="mCampNouTelephone">+34 902 18 99 00</string>
    <string name="mCampNouWebPage">www.fcbarcelona.com</string>
    <string name="mCampNouEmail">oab@fcbarcelona.cat</string>
    <string name="mOlimpicName">Museu Olímpic i de l\'Esport</string>
    <string name="mOlimpicAddress">Avinguda de l\'Estadi, 60</string>
    <string name="mOlimpicTelephone">+34 932 92 53 79</string>
    <string name="mOlimpicWebPage">www.museuolimpicbcn.cat</string>
    <string name="mOlimpicEmail">info@fbolimpica.es</string>
    <string name="mHistoriaName">Museu d\'Història de Catalunya</string>
    <string name="mHistoriaAddress">Plaça de Pau Vila, 3</string>
    <string name="mHistoriaTelephone">+34 93 225 47 00</string>
    <string name="mHistoriaWebPage">www.mhcat.cat</string>
    <string name="mHistoriaEmail">mhc.cultura@gencat.cat</string>
    <string name="mNacionalName">Museu Nacional d\'Art de Catalunya</string>
    <string name="mNacionalAddress">Parc de Montjuic</string>
    <string name="mNacionalTelephone">+34 936 22 03 76</string>
    <string name="mNacionalWebPage">www.museunacional.cat</string>
    <string name="mNacionalEmail">info@museunacional.cat</string>
    <string name="aquariumName">L\'Aquarium de Barcelona</string>
    <string name="aquariumAddress">Moll d\'Espanya del Port Vell s/n</string>
    <string name="aquariumTelephone">+34 932 21 74 74</string>
    <string name="aquariumWebPage">www.aquariumbcn.com</string>
    <string name="aquariumEmail">info@aquariumbcn.com</string>
    <string name="tibidaboName">Parc d\'atraccions Tibidabo</string>
    <string name="tibidaboAddress">Plaça Tibidabo, 3-4</string>
    <string name="tibidaboTelephone">+34 932 11 79 42</string>
    <string name="tibidaboWebPage">www.tibidabo.cat</string>
    <string name="tibidaboEmail">attclient@tibidabo.cat</string>
    <string name="zooName">Zoo de Barcelona</string>
    <string name="zooAddress">Parc de la Ciutadella, s/n</string>
    <string name="zooTelephone">+34 902 45 75 45</string>
    <string name="zooWebPage">zoobarcelona.cat</string>
    <string name="zooEmail">zoobarcelona@bsmsa.cat</string>
    <string name="navalToursName">BCNaval Tours</string>
    <string name="navalToursAddress">Moll de les Drassanes, s/n</string>
    <string name="navalToursTelephone">+34 937 95 85 68</string>
    <string name="navalToursWebPage">www.barcelonanavaltours.com</string>
    <string name="navalToursEmail">comercial@bcnavaltours.com</string>
    <string name="casinoName">Casino de Barcelona</string>
    <string name="casinoAddress">Marina, 19-21</string>
    <string name="casinoTelephone">+34 900 35 43 54</string>
    <string name="casinoWebPage">www.casinobarcelona.com</string>
    <string name="casinoEmail">info@casinobarcelona.com</string>
    <string name="jamboreeName">Jamboree</string>
    <string name="jamboreeAddress">Plaça Reial, 17</string>
    <string name="jamboreeTelephone">+34 933 19 17 89</string>
    <string name="jamboreeWebPage">www.masimas.com/jamboree</string>
    <string name="jamboreeEmail">info@masimas.com</string>
    <string name="bodegaName">La Bodega Flamenca</string>
    <string name="bodegaAddress">Roger de Flor, 230</string>
    <string name="bodegaTelephone">+34 626 29 67 09</string>
    <string name="bodegaWebPage">www.labodegaflamenca.com</string>
    <string name="bodegaEmail">info@labodegaflamenca.com</string>
    <string name="tarantosName">Tarantos</string>
    <string name="tarantosAddress">Plaça Reial, 17</string>
    <string name="tarantosTelephone">+34 933 19 17 89</string>
    <string name="tarantoseWebPage">www.masimas.com/tarantos</string>
    <string name="tarantosEmail">info@masimas.com</string>
    <string name="culture_tab_name">Culture</string>
    <string name="museums_tab_name">Museums</string>
    <string name="leisure_tab_name">Leisure</string>
    <string name="entertaintment_tab_name">Entertaintment</string>
    <string name="textView_location_name">Name</string>
    <string name="textView_location_address">Address</string>
    <string name="textView_location_phone">Phone</string>
    <string name="textView_location_webPage">webPage</string>
    <string name="textView_location_email">email</string>
</resources>
